# zero_copy_rosidl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  rosidl_python.patch
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker_build.yml
code/: import.sh
code/core/: .gitignore
code/core/.repos/jazzy/: extra.repos  patched.repos
code/core/.repos/jazzy/patches/: ros2-performance.includes.patch  ros2-performance.rename.patch  ros2-performance.sh
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/: CMakeLists.txt  package.xml  rosidl_typesupport_xcdr_cpp-extras.cmake.in  setup.cfg
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/cmake/: rosidl_typesupport_xcdr_cpp_generate_interfaces.cmake
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/include/rosidl_typesupport_xcdr_cpp/: identifier.hpp  message_type_support.hpp  message_type_support_decl.hpp  service_type_support.hpp  visibility_control.h
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/resource/: idl__experimental_rosidl_typesupport_xcdr_cpp.hpp.em  idl__experimental_type_support.cpp.em  idl__rosidl_typesupport_xcdr_cpp.hpp.em  idl__type_support.cpp.em  msg__rosidl_typesupport_xcdr_cpp.hpp.em  msg__type_support.cpp.em  rosidl_typesupport_xcdr_cpp__visibility_control.h.in  srv__rosidl_typesupport_xcdr_cpp.hpp.em  srv__type_support.cpp.em
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/rosidl_typesupport_xcdr_cpp/: __init__.py  cli.py  template_helpers.py
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp/src/: identifier.cpp  message_type_support.cpp  service_type_support.cpp
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp_tests/: CMakeLists.txt  package.xml
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp_tests/msg/: InnerMessage.msg  NestedMessage.msg
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp_tests/msg/experimental/: BasicTypes.msg  BoundedMessage.msg  UnboundedMessage.msg
code/rosidl_typesupport_xcdr/rosidl_typesupport_xcdr_cpp_tests/test/: test_basic_typesupport.cpp  test_constrained_typesupport.cpp  test_experimental_zero_copy.cpp  test_helpers.hpp  test_nested_serialization.cpp  test_serialization.cpp  test_serialization_overflow.cpp  test_serialization_roundtrip.cpp  test_service_typesupport.cpp  test_typesupport_api_errors.cpp  test_typesupport_handle.cpp  test_zero_copy_lifecycle.cpp
code/rosidl_typesupport_xcdr/xcdr_buffers/: CMakeLists.txt  package.xml
code/rosidl_typesupport_xcdr/xcdr_buffers/src/accessor/: accessor.cpp  const_accessor.cpp
code/rosidl_typesupport_xcdr/xcdr_buffers/src/layout/: layout_builder.cpp  (+1 more)
core_overrides/: .upstream_sync_rev
core_overrides/rosidl/rosidl_generator_c/cmake/: rosidl_generator_c_generate_interfaces.cmake
core_overrides/rosidl/rosidl_generator_c/resource/: idl__experimental.h.em  idl__experimental_functions.c.em  idl__experimental_functions.h.em  idl__experimental_struct.h.em  msg__experimental_functions.c.em  msg__experimental_functions.h.em  msg__experimental_struct.h.em
core_overrides/rosidl/rosidl_generator_c/rosidl_generator_c/: __init__.py  experimental.py
core_overrides/rosidl/rosidl_generator_cpp/resource/: action__experimental_struct.hpp.em  action__experimental_traits.hpp.em  idl__experimental.hpp.em  idl__experimental_struct.hpp.em  idl__experimental_traits.hpp.em  msg__experimental_struct.hpp.em  msg__experimental_traits.hpp.em  srv__experimental_struct.hpp.em  srv__experimental_traits.hpp.em
core_overrides/rosidl/rosidl_generator_cpp/rosidl_generator_cpp/: __init__.py  experimental.py
core_overrides/rosidl/rosidl_generator_tests/: CMakeLists.txt
core_overrides/rosidl/rosidl_runtime_c/: CMakeLists.txt
core_overrides/rosidl/rosidl_runtime_cpp/: CMakeLists.txt
core_overrides/rosidl_python/rosidl_generator_py/: CMakeLists.txt  package.xml  rosidl_generator_py-extras.cmake.in
core_overrides/rosidl_python/rosidl_generator_py/cmake/: rosidl_generator_py_generate_interfaces.cmake
core_overrides/rosidl_python/rosidl_generator_py/resource/: _action_experimental.py.em  _idl_experimental.py.em  _msg_experimental.py.em  _srv_experimental.py.em
core_overrides/rosidl_python/rosidl_generator_py/rosidl_generator_py/: experimental.py  generate_py_impl.py
core_overrides/rosidl_python/rosidl_generator_py/test/: test_experimental.py  test_experimental_interfaces.py
core_overrides/rosidl_python/rosidl_runtime_cpython/: CMakeLists.txt  package.xml  setup.py
core_overrides/rosidl_python/rosidl_runtime_cpython/include/rosidl_runtime_cpython/: raw_buffer.h
core_overrides/rosidl_python/rosidl_runtime_cpython/rosidl_runtime_cpython/: __init__.py  array.py  constraints.py  dtype.py  message_initialization.py  scalar.py  sequence.py  string.py
core_overrides/rosidl_python/rosidl_runtime_cpython/src/: raw_buffer.c
core_overrides/rosidl_python/rosidl_runtime_cpython/test/rosidl_runtime_cpython/: test_array.py  test_dtype.py  test_scalar.py  test_sequence.py  test_string.py
docker/: Dockerfile  Dockerfile.jazzy  docker-compose.yml  run.sh
docker/files/: entrypoint.sh  fixuid_config.yml  fixuid_wrapper.sh  helper_source_dependencies.repos
docker/files/patches_ext/: ros2-performance.patch  ros2-performance.sh
docker/files/patches_ros/: example_pkg.patch  example_pkg.sh  rosidl.patch  rosidl_python.patch  rosidl_python.sh  rosidl_runtime_py.patch
docker/scripts/: apply_core_overrides.sh  apply_ros_patches.sh  parse_benchmark_results.py  rebuild_ros.sh
xcdr_buffers/: .gitignore  CMakeLists.txt  README.md  package.xml
xcdr_buffers/include/xcdr_buffers/common/: types.hpp
xcdr_buffers/include/xcdr_buffers/layout/: layout_parser.hpp
xcdr_buffers/include/xcdr_buffers/serialization/: reader.hpp  writer.hpp
xcdr_buffers/src/common/: endianness.cpp
xcdr_buffers/src/layout/: layout.cpp  layout_builder.cpp
xcdr_buffers/src/serialization/: writer.cpp
xcdr_buffers/test/integration/: test_accessor_integration.cpp  test_fastcdr_interop.cpp  test_writer_parser.cpp
xcdr_buffers/test/unit/: test_const_accessor.cpp.bak
(+54 files in other folders)
