<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xcdr_buffers</name>
  <version>0.2.0</version>
  <description>
    XCDRv1 serialization and zero-copy buffer access library.
    Provides streaming serialization (XCdrWriter/XCdrReader) and 
    structured zero-copy access (XCdrLayout/XCdrAccessor) for PLAIN_CDR encoding.
  </description>
  
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>tl_expected</depend>
  <depend>tcb_span</depend>
  <depend>rcpputils</depend>
  
  <!-- Testing dependencies -->
  <test_depend>fastcdr</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
